<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frame_layout">
        <ImageView
            android:layout_marginTop="-30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/banner_img"
            android:id="@+id/main_image">
        </ImageView>

        <ImageButton
            android:layout_marginTop="-30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/fast"
            android:id="@+id/fast_image"
            android:scaleX="0.65"
            android:scaleY="0.65"
            android:layout_gravity="bottom"
            android:layout_marginBottom="28dp"
            android:background="@android:color/transparent">
        </ImageButton>

    </FrameLayout>



    <ScrollView
        android:layout_marginTop="-20dp"
        android:layout_below="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fafafa"
        android:id="@+id/scrollView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:background="#fafafa">

            <android.support.v7.widget.CardView
                app:cardElevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:id="@+id/cardsButtonId"
                    android:background="#fafafa"
                    android:text="@string/cards"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:cardElevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:id="@+id/wordsSpeakingButtonId"
                    android:background="#fafafa"
                    android:text="@string/wordsSpeaking"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:cardElevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:id="@+id/listenToWordsButtonId"
                    android:background="#fafafa"
                    android:text="@string/listenToWords"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:cardElevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:id="@+id/searchForPairButtonId"
                    android:background="#fafafa"
                    android:text="@string/searchForPair"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:cardElevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:id="@+id/createWordButtonId"
                    android:background="#fafafa"
                    android:text="@string/createWord"/>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                app:cardElevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:id="@+id/trueFalseButtonId"
                    android:background="#fafafa"
                    android:text="@string/trueFalse"/>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                app:cardElevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:id="@+id/selectionOfTranslationButtonId"
                    android:background="#fafafa"
                    android:text="@string/selectionOfTranslation"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:cardElevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <Button
                    android:background="#fafafa"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:id="@+id/translateByPicButtonId"
                    android:text="@string/translateByPic"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>




    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_above="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp" />
</RelativeLayout>